--- a/gym_management_system/www/profile_page.html
+++ b/gym_management_system/www/profile_page.html
@@ -6,7 +6,7 @@
       <i class="fas fa-user-circle"></i>{{ user_full_name }}
     </h2>
     <div class="user-profile-membership">
-      <i class="fas fa-check-circle"></i> Active Membership: {{ active_membership }}
+      <i class="fas fa-check-circle"></i> <strong>Active Membership:</strong> {{ active_membership }}
     </div>
     <div class="user-profile-details">
       {% if is_membership_active %}
